operator/pkg/manifests/namespace-lister/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-lister
---
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: namespace-lister
  name: namespace-lister
  namespace: namespace-lister
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: metrics
    port: 9100
    targetPort: 9100
  selector:
    apps: namespace-lister
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    ignore-check.kube-linter.io/no-anti-affinity: Using topologySpreadConstraints
  labels:
    apps: namespace-lister
  name: namespace-lister
  namespace: namespace-lister
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      apps: namespace-lister
  template:
    metadata:
      labels:
        apps: namespace-lister
    spec:
      containers:
      - args:
        - -enable-tls
        - -cert-path=/var/tls/tls.crt
        - -key-path=/var/tls/tls.key
        - -enable-metrics
        - -metrics-address=:9100
        image: quay.io/konflux-ci/namespace-lister@sha256:d426526ce0c3de053be2bbc50a14058b47ff210270188c54d0a21100ea9dc3d6
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 1
        name: namespace-lister
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9100
          name: metrics
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 20m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /var/tls
          name: tls
          readOnly: true
      serviceAccountName: namespace-lister
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            apps: namespace-lister
        maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - name: tls
        secret:
          secretName: namespace-lister-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-lister-allow-from-konfluxui
  namespace: namespace-lister
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: konflux-ui
    - podSelector:
        matchLabels:
          app: proxy
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      apps: namespace-lister
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-lister-allow-metrics-traffic
  namespace: namespace-lister
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - port: 9100
      protocol: TCP
  podSelector:
    matchLabels:
      apps: namespace-lister
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-lister-allow-to-apiserver
  namespace: namespace-lister
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      apps: namespace-lister
  policyTypes:
  - Egress
